--- a/src/nezet/AutoMegjelenito.form
+++ b/src/nezet/AutoMegjelenito.form
@@ -38,6 +38,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="&#xd6;ssz bev&#xe9;tel"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuLkOszzActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuLkDohanyzas">
               <Properties>
