dohanyzas ossz autoban

--- a/src/nezet/AutoMegjelenito.form
+++ b/src/nezet/AutoMegjelenito.form
@@ -46,6 +46,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Minden aut&#xf3;ba lehet doh&#xe1;nyozni"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuLkDohanyzasActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuLkLeghosszF">
               <Properties>
